@@ -39,6 +39,7 @@
 	- fix: alloca'd memory used outside of scope (alpha segfault).
 	- fix: define/eval options assumed sizeof(int) == sizeof(void *).
 	- fix: sparc64 per-platform directory shouldn't be sparc64linux.
+	- fix: (segfault) verify needs rpmdb while query does not.
 	
 3.0.3 -> 3.0.4
 	- use compressed filenames on install side.
